校验器，全局异常处理，修改密码